map loads on screen with a working google maps API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">FYProject</string>
     <string name="title_activity_map">Map</string>
+    <string name="google_map_api_key">AIzaSyDFNOGk6EE0XngdVR08zkar_VeYxWVRe3Q</string>
 </resources>
