--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
     <string name="app_name">FYProject</string>
+
+    <string name="qr_code">qr_code</string>
+    <string name="enter_your_info">Enter your info</string>
+    <string name="generate_qr_code">Generate QR Code</string>
+
     <string name="title_activity_map">Map</string>
     <string name="google_map_api_key">AIzaSyDFNOGk6EE0XngdVR08zkar_VeYxWVRe3Q</string>
     <string name="title_activity_maps">MapsActivity</string>
